--- a/index.html
+++ b/index.html
@@ -676,10 +676,7 @@
         <div class="modal-content">
             <span id="closeModal" class="close-button-m">&times;</span>
             <h2 style="font-weight:bold; font-size: 30px;">Guide d'utilisation du géoportail de l'AUEJSB</h2>
-            <video controls>
-                <source src="Guide géoportail de l'AUEJSB.mp4" type="video/mp4">
-                Votre navigateur ne prend pas en charge la vidéo.
-            </video>
+            <iframe src="http://www.youtube.com/embed/XMgV77MNjvA?rel=0" frameborder="0" width="600" height="350" allow="autoplay"></iframe>
             <br>
             <a href="Guide géoportail de l'AUEJSB.pdf" download target="_blank" class="btn-m btn-primary">Télécharger la version PDF</a>
         </div>
