--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ document.getElementById("openModal").onclick = function() {
                 weight: 2
             };
         } else {
-            var fillColor = colorMapping[nature] || 'gray'; 
+            var fillColor = colorMapping[nature] || '#f4ede4'; 
 
             return {
                 fillColor: fillColor,
