--- a/index.html
+++ b/index.html
@@ -524,6 +524,21 @@
 #openModal:hover {
     background-color: #013B72;
 }
+        .responsive-video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%; /* Ensures it does not exceed modal width */
+}
+
+.responsive-video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
             @media screen and (max-width: 850px) {
                 #popup, #info-popup, #file-upload-popup {
                     width: 70%; 
@@ -694,7 +709,9 @@
         <div class="modal-content">
             <span id="closeModal" class="close-button-m">&times;</span>
             <h2 style="font-weight:bold; font-size: 30px;">Guide d'utilisation du géoportail de l'AUEJSB</h2>
-            <iframe class="frame" src="https://www.youtube.com/embed/XMgV77MNjvA?rel=0" frameborder="0" width="600" height="350" allow="autoplay"></iframe>
+            <div class="responsive-video-container">
+                <iframe src="https://www.youtube.com/embed/XMgV77MNjvA?rel=0" frameborder="0" allow="autoplay"></iframe>
+            </div>
             <br>
             <a href="Guide géoportail de l'AUEJSB.pdf" download target="_blank" class="btn-m btn-primary">Télécharger la version PDF</a>
         </div>
