--- a/index.html
+++ b/index.html
@@ -555,6 +555,9 @@
                  -webkit-overflow-scrolling: touch; 
                  top: 210px
                 }
+                #usageGuideModal .modal-content h2 {
+                    font-size: 20px !important; 
+                }
                 #info-popup {
                    top: 210px;
                    overflow-y: auto;
